--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ finetune:
 loader:
   train_ratio: 0.8
   num_workers: 0
-  dataPath: /workspace/Jeming/MR/data/
+  dataPath: /workspace/Jeming/data/
   checkModels: ['ADC', 'T2_FS']
   model_scale: [[0,4500],[0,6000]] # 对应模态的最小最大像素值，用于归一化
   target_size: [128, 128, 64]
